3.4
	+ Migrated to use Plack as the application server instead of mod_perl
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Better synchronization between sessions and iptables rules
	+ Fixed SID generation code
	+ Fix missing uses in EBox::CaptivePortal::Model::BWSettings
3.3
	+ Fixed regression on restricted authentication to group
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Use upstream Apache2::AuthCookie instead of forked version
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.6
	+ Allow login when accessing an HTTPS page
3.1.5
	+ Improved reload icon
	+ Fixed regression trying to access redis after users API changes
3.1.4
	+ User add-on adapted to right panel view
	+ Added menu icon
	+ Use MAC address in object exception
	+ Fixed bug in exceptions firewall rules
	+ Adapt firewall rules to new accept chains
	+ Adapted user addon to multi-OU tree view
	+ Removed no longer necessary jQuery noConflict()
	+ Updated to use the new API to retrieve groups and users.
	+ Updated to use the new security group concept.
	+ Make user authorizarion compatible with external AD mode
3.1.3
	+ Fix regression in CGIs package names
	+ Use new EBox::Users namespace instead of EBox::UsersAndGroups
3.1.2
	+ Ported JS code to jQuery
3.1.1
	+ Added missing use sentence to Users Model
3.1
	+ Adapted to the new EBox::CGI::Run
	+ Depend on zentyal-core 3.1
3.0.3
	+ Fixed bug which could generate invalid iptable rules when
	  captive portal listens in more than one interface
	+ Capture exceptions are now compatible with http proxy
	  transparent mode
	+ Capture exceptions are applied to input to the server itself
3.0.2
	+ Client popup made more compatible with different browsers
	+ Removed superfluos firewall rules removal, better management of
	  firewall lock
	+ Added 'Continue to destination' link
	+ Remove conntrac kstate when adding/removing user rules