@@ -1,4 +1,5 @@
 3.4
+	+ Regenerate, if needed captive, portal rules on startup of captived
 	+ Migrated to use Plack as the application server instead of mod_perl
 	+ Use service instead of deprecated invoke-rc.d for init.d scripts
 	+ Set version to 3.4
